fix waybar workspace spacing

--- a/common/.config/waybar/style_template.css
+++ b/common/.config/waybar/style_template.css
@@ -36,7 +36,7 @@ window#waybar {
 
 #workspaces button {
     color: {{colors.on_surface.hex}};
-    padding: 2px 6px;
+    padding: 2px 8px;
 }
 
 #workspaces button.active {
